--- a/src/components/AdminLogistics/AdminLogistics.css
+++ b/src/components/AdminLogistics/AdminLogistics.css
@@ -67,16 +67,16 @@ main {
     }
 
 footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-
     position: absolute;
-    width: 1112.75px;
-    height: 70px;
-    left: 153px;
-    top: 4338px;
+    width: 1800px;
+    height: 224px;
+    left: 0px;
+    bottom: 0px;
+    top: 5500px;
+
+    /* Neutral/N900 */
+
+    background: #091E42;
 }
 
 .footerdiv{
@@ -87,8 +87,50 @@ footer{
     padding: 0px;
 
     position: absolute;
-    width: 1128px;
+    width: 1300px;
     height: 70px;
-    left: 156px;
+    left: 170px;
     top: 71px;
+}
+
+#footer-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: static;
+    width: 286px;
+    height: 70px;
+    left: 0px;
+    top: 0px;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 395px;
+}
+
+#footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 0px;
+
+    position: static;
+    width: 447px;
+    height: 56px;
+    left: 681px;
+    top: 14px;
+
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 1;
+    margin: 0px 395px;
 }
